assets/css/style.css
:root {
    --bg: #4c4b49;
    --dark: #282724;
    --accent: #208a8a;
    --light: #fff;
    --dark2: #1c2732;
    --acc2-25: #025f5f;
    --shadow: #181818;
    --shadow2: #90908d;  }

    html, body {
      overflow-y: auto;
      margin: 0;
      padding: 0; 
  }

  body {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 16px;
    margin: 0;
    background-image: linear-gradient(to bottom, var(--light), var(--shadow2));
    max-width: 100vw;
    overflow-x: hidden;
  }

  .col-style1 {
    background-image: linear-gradient(to bottom, var(--accent), var(--dark2));
    color:var(--light);
    box-shadow: var(--shadow) 5px 5px 10px;
  }

  .col-style2 {
    background: var(--dark2);
    color:var(--light);
    box-shadow: var(--shadow) 5px 5px 10px;
    margin-top: 2px;
  }

  .col-style2 img {
    align-self: center;
    border: solid 4px var(--bg);
  }

  h1 {
    font-family: 'Bebas Neue', sans-serif;
    font-size: 4em;
    padding-top: 10px;
  }

  h2 {
    font-style: italic;
    font-size: 1.4em;
  }

  .my-card {
    background-color: var(--light);
    box-shadow: var(--shadow) 5px 5px 10px;
    border-radius: 4px;
  }

  .my-btn {
    font-family: 'Bebas Neue', sans-serif;
    margin-right: 2px;
  }

  .button:hover {
    background-color: var(--accent);
    color: var(--light);
    border: 0px;
  }

.rounded-right {
  border-radius: 9999px;
}

